--- a/faq-accordion-card-main/index.html
+++ b/faq-accordion-card-main/index.html
@@ -49,7 +49,11 @@
             <!-- Question Title -->
             <div class="question-title">
               <p>How many team members can I invite?</p>
-              <button type="button" class="question-btn">
+              <button
+                aria-label="arrow down"
+                type="button"
+                class="question-btn"
+              >
                 <img
                   class="open-icon"
                   src="./images/icon-arrow-down.svg"
@@ -71,7 +75,11 @@
             <!-- Question Title -->
             <div class="question-title">
               <p>What is the maximum file upload size?</p>
-              <button type="button" class="question-btn">
+              <button
+                aria-label="arrow down"
+                type="button"
+                class="question-btn"
+              >
                 <img
                   class="open-icon"
                   src="./images/icon-arrow-down.svg"
@@ -93,7 +101,11 @@
             <!-- Question Title -->
             <div class="question-title">
               <p>How do I reset my password?</p>
-              <button type="button" class="question-btn">
+              <button
+                aria-label="arrow down"
+                type="button"
+                class="question-btn"
+              >
                 <img
                   class="open-icon"
                   src="./images/icon-arrow-down.svg"
@@ -115,7 +127,11 @@
             <!-- Question Title -->
             <div class="question-title">
               <p>Can I cancel my subscription?</p>
-              <button type="button" class="question-btn">
+              <button
+                aria-label="arrow down"
+                type="button"
+                class="question-btn"
+              >
                 <img
                   class="open-icon"
                   src="./images/icon-arrow-down.svg"
@@ -137,7 +153,11 @@
             <!-- Question Title -->
             <div class="question-title">
               <p>Do you provide additional support?</p>
-              <button type="button" class="question-btn">
+              <button
+                aria-label="arrow down"
+                type="button"
+                class="question-btn"
+              >
                 <img
                   class="open-icon"
                   src="./images/icon-arrow-down.svg"
