--- a/faq-accordion-card-main/index.html
+++ b/faq-accordion-card-main/index.html
@@ -14,17 +14,6 @@
     <link rel="stylesheet" href="./style.css" />
 
     <title>Frontend Mentor | FAQ Accordion Card</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
     <div class="accordion">
@@ -48,7 +37,7 @@
           <article class="question">
             <!-- Question Title -->
             <div class="question-title">
-              <p>How many team members can I invite?</p>
+              <h4>How many team members can I invite?</h4>
               <button
                 aria-label="arrow down"
                 type="button"
@@ -74,7 +63,7 @@
           <article class="question">
             <!-- Question Title -->
             <div class="question-title">
-              <p>What is the maximum file upload size?</p>
+              <h4>What is the maximum file upload size?</h4>
               <button
                 aria-label="arrow down"
                 type="button"
@@ -100,7 +89,7 @@
           <article class="question">
             <!-- Question Title -->
             <div class="question-title">
-              <p>How do I reset my password?</p>
+              <h4>How do I reset my password?</h4>
               <button
                 aria-label="arrow down"
                 type="button"
@@ -126,7 +115,7 @@
           <article class="question">
             <!-- Question Title -->
             <div class="question-title">
-              <p>Can I cancel my subscription?</p>
+              <h4>Can I cancel my subscription?</h4>
               <button
                 aria-label="arrow down"
                 type="button"
@@ -152,7 +141,7 @@
           <article class="question">
             <!-- Question Title -->
             <div class="question-title">
-              <p>Do you provide additional support?</p>
+              <h4>Do you provide additional support?</h4>
               <button
                 aria-label="arrow down"
                 type="button"
