--- a/chat-app-css-illustration-master/index.html
+++ b/chat-app-css-illustration-master/index.html
@@ -78,8 +78,8 @@
             </div>
           </div>
           <form class="form">
-            <input class="msg-input" type="text" placeholder="Type a message…">
-            <button class="submit-btn"></i><i class="fas fa-chevron-circle-right fa-2x"></i></button>
+            <input aria-label="message input" class="msg-input" type="text" placeholder="Type a message…">
+            <button aria-label="submit button" class="submit-btn"></i><i class="fas fa-chevron-circle-right fa-2x"></i></button>
           </form>
         </div>
       </div>
