--- a/testimonials-grid-section-main/index.html
+++ b/testimonials-grid-section-main/index.html
@@ -32,6 +32,7 @@
     <div class="testimonial-grid">
       <div class="container">
         <div class="grid-box grid-box-1">
+          <img src="./images/bg-pattern-quotation.svg" alt="" class="quote" />
           <div class="info-box">
             <img src="./images/image-daniel.jpg" alt="" class="avatar" />
             <div class="name-status">
