--- a/loopstudios-landing-page-main/index.html
+++ b/loopstudios-landing-page-main/index.html
@@ -273,6 +273,9 @@
             © 2021 Loopstudios. All rights reserved.
           </p>
         </div>
+         <p>
+            Coded by  <a href="https://www.devubong.com/" target='_blank'>devubong</a>
+         </p> 
       </div>
     </footer>
     <!-- Footer End -->
