--- a/loopstudios-landing-page-main/index.html
+++ b/loopstudios-landing-page-main/index.html
@@ -273,7 +273,7 @@
             © 2021 Loopstudios. All rights reserved.
           </p>
         </div>
-        <div class='container>
+        <div class='container'>
          <p>
             Coded by  <a href="https://www.devubong.com/" target='_blank'>devubong</a>
          </p>
