--- a/loopstudios-landing-page-main/index.html
+++ b/loopstudios-landing-page-main/index.html
@@ -274,8 +274,8 @@
           </p>
         </div>
         <div class='container'>
-         <p>
-            Coded by  <a href="https://www.devubong.com/" target='_blank'>devubong</a>
+         <p style='text-align: center;'>
+            Coded by  <a href="https://www.devubong.com/" target='_blank' style='color: #FF52BF;'>devubong</a>
          </p>
         </div>
       </div>
