--- a/loopstudios-landing-page-main/index.html
+++ b/loopstudios-landing-page-main/index.html
@@ -274,7 +274,7 @@
           </p>
         </div>
         <div class='container'>
-         <p style='text-align: center;'>
+         <p style='margin: 0;'>
             Coded by  <a href="https://www.devubong.com/" target='_blank' style='color: #FF52BF;'>devubong</a>
          </p>
         </div>
