--- a/insure-landing-page-master/index.html
+++ b/insure-landing-page-master/index.html
@@ -17,7 +17,9 @@
   <header>
 
     <div class="wrapper">
-      <img src="images/logo.svg" class="header-logo" alt="insure logo">
+      <a href='#' >
+        <img src="images/logo.svg" class="header-logo" alt="insure logo">
+      </a>
 
       <a class="hamburger" id="hamburger">
         <img class="open" src="./images/icon-hamburger.svg" alt="">
