--- a/3-column-preview-card-component-main/index.html
+++ b/3-column-preview-card-component-main/index.html
@@ -16,7 +16,7 @@
       <title>Frontend Mentor | 3-column preview card component</title>
    </head>
    <body>
-      <div class="wrapper">
+      <main class="wrapper">
          <div class="container">
             <div class="card-grid">
                <div class="card">
@@ -51,6 +51,6 @@
                </div>
             </div>
          </div>
-      </div>
+      </main>
    </body>
 </html>
