--- a/stats-preview-card-component-main/index.html
+++ b/stats-preview-card-component-main/index.html
@@ -16,7 +16,7 @@
       <title>Frontend Mentor | Stats preview card component</title>
    </head>
    <body>
-      <div class="card-wrap">
+      <main class="card-wrap">
          <div class="container">
             <div class="card">
                <div class="img">
@@ -42,6 +42,6 @@
                </div>
             </div>
          </div>
-      </div>
+      </main>
    </body>
 </html>
